# typio-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  meson.build  meson_options.txt  meson_post_install.sh  typio_build_config.h.in
.github/workflows/: ci.yml
crates/typio-host/: Cargo.toml  build.rs
crates/typio-host/src/: app.rs  backoff.rs  boundary.rs  candidate_guard.rs  config_watcher.rs  diagnostics.rs  focus_controller.rs  health.rs  icon_badge.rs  indicator.rs  input_method.rs  ipc_bus.rs  keyboard_policy.rs  language_display.rs  lib.rs  main.rs  notifier.rs  panel.rs  panel_coordinator.rs  panel_scheduler.rs  preedit.rs  protocols.rs  pw_capture.rs  repeat_timer.rs  resume_signal.rs  service.rs  session_glue.rs  startup_guard.rs  state_controller.rs  text_ui_state.rs  tray_menu.rs  tray_sni.rs  uds_server.rs  watchdog.rs
crates/typio-host/src/app/: cli.rs  event_loop.rs  indicator.rs  mod.rs  signals.rs  tray.rs
crates/typio-host/src/engine_loader/: caps.rs  dirs.rs  manifest.rs  mod.rs
crates/typio-host/src/ipc/: framing.rs  mod.rs  protocol.rs
crates/typio-host/src/keyboard/: mod.rs  router.rs
crates/typio-host/tests/: daemon_stub.rs  engine_loader.rs  typio_daemon.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
data/: core.toml.example  typio.service.in  wayland.toml.example
data/applications/: typio.desktop.in
data/autostart/: typio.desktop.in
docs/: index.md
docs/adr/: 0001-record-architecture-decisions.md  0002-wayland-input-method-v2.md  0003-session-controller-reduce-diff.md  0004-event-loop-scheduling-and-watchdog.md  0005-unified-panel-backend.md  0006-resilient-candidate-popup-present.md  0007-dbus-adapter-over-status-service.md  0008-ipc-protocol-resource-namespaces-uds-only.md  0009-long-term-performance-optimizations.md  0010-non-blocking-candidate-popup-present.md  0011-colour-independent-coverage-glyphs.md  0012-glyph-atlas-shared-texture.md  0013-grow-only-popup-swapchain.md  0015-candidate-popup-lag-final-fixes.md  0016-per-glyph-font-fallback.md  0017-positioned-ui-arbitration.md  0018-focus-transition-classification.md  0019-atlas-hash-compaction.md  0023-panel-scheduler-state-machine.md  0024-idle-driven-loop-and-demand-gated-watchdog.md  0027-ipc-engine-manifests.md  0028-direct-ipc-engine-workers.md  0029-engine-package-install-layout.md  0030-engine-process-manifests.md  0033-language-led-tray-surface.md  0034-dynamic-engine-capabilities.md  0035-bilingual-migration-to-rust.md  index.md
docs/dev/: code-style.md  maintenance.md  panel-appearance.md  popup-appearance.md  rendering-organization.md  setup.md  testing.md
docs/explanation/: candidate-panel-behavior.md  control-surfaces.md  event-loop-scheduling.md  focus-controller.md  frontend-graphics.md  input-method-session.md  lifecycle-resilience.md  panel-architecture.md  performance-strategy.md  project-scope.md  security-model.md  session-controller.md  timing-model.md  watchdog.md  wayland-input-method.md
docs/how-to/: package-for-distribution.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  engine-discovery.md  glossary.md  ipc-protocol.md  memory-budget.md  stability.md
protocols/: input-method-unstable-v2.xml
src/: app.c  app.h  cli.c  cli.h  clock.h  dbus_helpers.h  engine_loader.c  engine_loader.h  main.c  meson.build  plugin_loader.c  plugin_loader.h  recent_log.h
src/bridge/: boundary.c  boundary.h  candidate_guard.c  candidate_guard.h
src/engine/: backoff.c  backoff.h  boundary.c  boundary.h  identity.c  identity.h  lifecycle.c  lifecycle.h  lifecycle_policy.c  lifecycle_state.h  reconcile.c  reconciler.c  reconciler.h  resume.c  resume.h  resume_model.h  session_controller.c  session_controller.h  startup.c  startup.h
src/frontend/: aux_adapters.c  aux_adapters.h  aux_handler.c  candidate_guard.h  event_loop.c  frontend.c  frontend.h  frontend_bind.c  indicator.c  input_method.c  internal.h  keyboard.c  panel_coordinator.c  runtime_config.c  session_effects.c  shortcut.c  shortcut.h  trace.c  trace.h  watchdog.c
src/input/: arbiter.c  arbiter.h  bridge.c  bridge.h  chords.c  chords.h  debug.c  debug.h  modifiers.c  modifiers.h  repeat.c  repeat.h  repeat_guard.c  repeat_guard.h  router.c  router.h  tracker.c  tracker.h  tracker_access.h  xkb.c  xkb.h
src/ipc/: ipc_bus.c  ipc_bus.h  tip_json.c  tip_json.h  tip_protocol.c  tip_protocol.h  uds_server.c  uds_server.h
src/notify/: health.c  health.h  notifications.c  notifications.h
src/platform/: monotonic.h  panel.h
src/state/: controller.c  controller.h  engine_placeholder.c  engine_placeholder.h  service.c  service.h
src/tray/: bus.c  menu_model.c  menu_model.h  sni.c  tray.h  tray_internal.h
src/ui/: backend.c  backend.h  fallback_cache.h  preedit.c  preedit.h  renderer.c  renderer.h  state.c  state.h  (+1 more)
subprojects/: flux.wrap  libtypio.wrap
tests/: asan_suppressions.txt  meson.build  test_boundary_bridge.c  test_fallback_cache.c  test_glyph_pack.c  test_identity.c  test_key_arbiter.c  test_key_route.c  test_key_tracking.c  test_lifecycle.c  test_lifecycle_state.c  test_modifier_policy.c  test_reconcile_model.c  test_repeat_guard.c  test_server_app.c  test_shortcut_chord.c  test_startup_guard.c  test_state_machine_properties.c  test_text_ui_state.c  test_vk_bridge.c
tests/engine/: test_focus_controller.c  test_identity.c
tests/frontend/: test_candidate_guard.c
tests/fuzz/: fuzz_tip_json.c
tests/input/wayland/: test_vk_bridge.c
tests/integration/: mock_compositor.c  mock_compositor.h  test_basic_flow.c
tests/state/: test_controller_icon.c  test_language_helpers.c
tests/tray/: test_menu_model.c
tests/ui/: glyph_atlas_test_stubs.c  test_font_cache.c  test_font_resolve_purge.c  test_glyph_atlas_predicates.c
tests/wayland/: test_candidate_guard.c  test_candidate_snapshot.c  test_panel_scheduler.c
tests/wayland/keyboard/: test_key_arbiter.c  test_key_route.c  test_vk_bridge.c
tests/wayland/keyboard/policy/: test_key_tracking.c  test_modifier_policy.c  test_repeat_guard.c  test_shortcut_chord.c
(+81 files in other folders)
