[workspace]
resolver = "2"
members = ["crates/typio-host", "crates/xtask"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ming2k/typio-linux"
rust-version = "1.85"

[workspace.dependencies]
# Wayland client (Smithay project) + scanner for codegen from local XMLs.
#
# We deliberately do NOT depend on the `wayland-protocols` crate. Reasons:
#   - typio's two critical protocols (input-method-v2 and
#     virtual-keyboard-v1) are not shipped there anyway (as of 0.32.13
#     only input-method-v1 is)
#   - this repo ships all needed XMLs in protocols/; generating Rust
#     bindings from them keeps a single source of truth for protocol XMLs
#   - avoids splitting protocols across "from crate" vs "from local XML"
#
# bitflags + wayland-backend are direct deps because the code emitted by
# wayland_scanner references them by crate name (same reason the
# wayland-protocols crate itself lists them as direct deps).
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
bitflags = "2"
inotify = "0.11"
nix = { version = "0.31", features = ["time", "event", "socket", "fs", "user"] }
libc = "0.2"
# zbus's blocking-api wraps an async runtime (async-io by default). The
# blocking-api feature gives us Connection::system() and receive_signal()
# — the sync API surface we use from the logind worker thread.
zbus = { version = "5", default-features = true, features = ["blocking-api"] }
xkbcommon = "0.9"
ab_glyph = "0.2"
flux-sys = { git = "https://github.com/ming2k/flux-rs.git", tag = "v0.1.1" }
flux-text-sys = { git = "https://github.com/ming2k/flux-rs.git", tag = "v0.1.1" }
wayland-sys = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# The framework library and its ABI headers — published as a sibling repo on
# GitHub so a fresh `cargo build` from this repo alone resolves everything
# without checkout-layout assumptions.
libtypio = { git = "https://github.com/typio-ime/libtypio.git", tag = "v0.5.0" }
typio-abi = { git = "https://github.com/typio-ime/libtypio.git", tag = "v0.5.0" }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
