option('build_tests', type: 'boolean', value: true,
    description: 'Build tests')
option('enable_wayland', type: 'boolean', value: true,
    description: 'Build Wayland input method frontend')
option('enable_systray', type: 'boolean', value: false,
    description: 'Enable StatusNotifierItem tray support')
option('enable_voice', type: 'boolean', value: false,
    description: 'Enable voice input support (PipeWire audio capture + voice session infrastructure)')
option('enable_asan', type: 'boolean', value: false,
    description: 'Enable AddressSanitizer')
option('enable_ubsan', type: 'boolean', value: false,
    description: 'Enable UndefinedBehaviorSanitizer')
option('enable_fuzzers', type: 'boolean', value: false,
    description: 'Build libFuzzer harnesses (requires clang)')
