[package]
name = "typio-host"
version = "0.4.0-dev"
description = "Typio Wayland input-method host (Rust port in progress)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wayland-client.workspace = true
wayland-scanner.workspace = true
wayland-backend.workspace = true
bitflags.workspace = true
libtypio.workspace = true
typio-abi = { workspace = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inotify.workspace = true
nix.workspace = true
calloop.workspace = true
zbus.workspace = true
libc.workspace = true
xkbcommon.workspace = true
ab_glyph.workspace = true
flux-sys.workspace = true
wayland-sys.workspace = true

[dev-dependencies]
tempfile = "3"
