[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"

[package.metadata.cargo-machete]
ignored = ["anyhow"]
